# SKSE-Menu-Framework-Template

./: .gitmodules  CMakeLists.txt  vcpkg.disabled.json
.github/workflows/: build.yml
include/: SKSEMenuFramework.h  UI.h
